Fixed dropdown arrow on Role select to appear on smaller mobile devices

--- a/frontend/client/styles/screens/add_member_modal.scss
+++ b/frontend/client/styles/screens/add_member_modal.scss
@@ -31,7 +31,7 @@
   .custom-select:after {
     content: url('../../assets/arrow-down.svg');
     position: relative;
-    left: 320px;
+    left: 92%;
     top: -31px;
     background-color: transparent;
     pointer-events: none;
